--- a/app/src/main/res/layout/perfil_activity.xml
+++ b/app/src/main/res/layout/perfil_activity.xml
@@ -8,266 +8,197 @@
     android:background="@drawable/bg"
     tools:context=".PerfilActivity">
 
-
-    <View
-        android:id="@+id/view14"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="44dp"
-        android:background="@drawable/arrow_back"
-        app:layout_constraintBottom_toTopOf="@+id/cardView4"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
-
-    </View>
-
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="196dp"
-        android:layout_marginBottom="22dp"
-        android:src="@drawable/user"
-        app:layout_constraintBottom_toTopOf="@+id/textView21"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/view14"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="9dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#ffffff"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView23"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView22"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:ignore="MissingConstraints"
-        android:text="Dependente ou titular" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="0dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="171dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="38dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#ffffff"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textView23"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView21"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cardView4"
-        tools:ignore="MissingConstraints"
-        android:text="Nome completo" />
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="103dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="18dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#ffffff"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21"
-        tools:ignore="MissingConstraints"
-        android:text="empresa de parceria" />
-
-    <TextView
-        android:id="@+id/rede"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="148dp"
-        android:lineSpacingExtra="2sp"
-        android:text="Rede\nexemplo rede"
-        android:textColor="#ffffff"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView24"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="120dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="61dp"
-        android:lineSpacingExtra="2sp"
-        android:text="Minhas Consultas"
-        android:textColor="#ffffff"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/cardView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="87dp"
-        android:layout_height="29dp"
-        android:layout_marginBottom="50dp"
-        android:lineSpacingExtra="2sp"
-        android:text="Reembolso"
-        android:textColor="#ffffff"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView4"
-        tools:ignore="MissingConstraints" />
-
-
-    <ImageButton
-        android:id="@+id/view16"
-        android:layout_width="65dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginEnd="227dp"
-        android:background="@drawable/home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/view18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView6"
-        app:layout_constraintVertical_bias="0.613"
-        tools:ignore="ExtraText,MissingConstraints" />
-
-    <ImageButton
-        android:id="@+id/view17"
-        android:layout_width="88dp"
-        android:layout_height="73dp"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/perrot"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView4"
-        tools:ignore="ExtraText,MissingConstraints" />
-
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView6"
-        android:layout_width="388dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="110dp"
+        android:id="@+id/cardView1"
+        android:layout_width="368dp"
+        android:layout_height="148dp"
+        android:layout_marginBottom="480dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/view18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15"
-        tools:ignore="MissingConstraints">
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView5"
-        android:layout_width="348dp"
-        android:layout_height="59dp"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintStart_toStartOf="parent">
 
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="15dp"
+            android:text="Dependente ou titular"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:text="Nome: "
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textViewNome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="67dp"
+            android:layout_marginTop="40dp"
+            android:text="Usuário"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="175dp"
+            android:layout_marginTop="40dp"
+            android:text="E-mail: "
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textViewEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="223dp"
+            android:layout_marginTop="40dp"
+            android:text="email@example.com"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="60dp"
+            android:text="Empresa de parceria: "
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="80dp"
+            android:text="Nº da carteirinha"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="100dp"
+            android:text="1234456789"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="175dp"
+            android:layout_marginTop="80dp"
+            android:text="Rede"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="175dp"
+            android:layout_marginTop="100dp"
+            android:text="1234456789"
+            android:textColor="@android:color/white" />
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="82dp"
-        android:lineSpacingExtra="2sp"
-        android:text="Nº  carteirinha\n1234456789"
-        android:textColor="#ffffff"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView15"
-        app:layout_constraintEnd_toStartOf="@+id/rede"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23"
-        tools:ignore="MissingConstraints" />
-
-    <View
-        android:id="@+id/view15"
-        android:layout_width="78dp"
-        android:layout_height="69dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/view16"
-        tools:ignore="MissingConstraints">
-
-    </View>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView4"
-        android:layout_width="402dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="118dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="319dp"
+        android:id="@+id/cardView2"
+        android:layout_width="305dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="52dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/view17"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.981"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toBottomOf="@id/cardView1">
 
+        <View
+            android:id="@+id/view9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:id="@+id/view10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
     </androidx.cardview.widget.CardView>
 
-    <View
-        android:id="@+id/view18"
-        android:layout_width="50dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="305dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="52dp"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardCornerRadius="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardView2" >
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="52dp"
+            android:text="TextView" />
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="44dp"
         android:layout_height="50dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/account_circle"
-        app:layout_constraintBottom_toBottomOf="@+id/view15"
-        app:layout_constraintStart_toEndOf="@+id/view16"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="64dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3"
+        app:srcCompat="@drawable/home" />
 
-        tools:ignore="ExtraText,MissingConstraints" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="72dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3"
+        app:srcCompat="@drawable/perrot" />
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="72dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3"
+        app:srcCompat="@drawable/account_circle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
