--- a/app/src/main/res/layout/perfil_activity.xml
+++ b/app/src/main/res/layout/perfil_activity.xml
@@ -8,11 +8,23 @@
     android:background="@drawable/bg"
     tools:context=".PerfilActivity">
 
+
+    <ImageView
+        android:id="@+id/user"
+        android:layout_width="69dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="78dp"
+
+        android:src="@drawable/user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView1"
         android:layout_width="368dp"
         android:layout_height="148dp"
-        android:layout_marginBottom="480dp"
+        android:layout_marginBottom="560dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -144,7 +156,11 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="40dp"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:text="Minhas Consultas" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -164,16 +180,18 @@
             android:id="@+id/textView17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:layout_marginEnd="52dp"
-            android:text="TextView" />
+            android:layout_marginStart="110dp"
+            android:layout_marginTop="40dp"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:text="Reembolso" />
     </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="44dp"
         android:layout_height="50dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="64dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.853"
@@ -185,7 +203,7 @@
         android:id="@+id/imageView3"
         android:layout_width="72dp"
         android:layout_height="54dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="60dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/cardView3"
@@ -195,7 +213,7 @@
         android:id="@+id/imageView4"
         android:layout_width="72dp"
         android:layout_height="59dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView3"
